--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@formspree/react": "^3.0.0",
@@ -59,9 +60,10 @@
     "jszip": "latest",
     "lucide-react": "^0.454.0",
     "motion": "^12.23.24",
-    "next": "14.2.16",
+    "next": "^14.2.33",
     "next-themes": "^0.4.6",
     "pdf-lib": "latest",
+    "pdfjs": "^2.5.4",
     "pdfjs-dist": "^3.11.174",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
