--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@vercel/analytics": "latest",
+    "@vercel/speed-insights": "^1.3.1",
     "autoprefixer": "^10.4.20",
     "canvas": "latest",
     "class-variance-authority": "^0.7.1",
@@ -87,8 +88,8 @@
     "@tailwindcss/postcss": "^4.1.9",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
